--- a/TEST/coloroptimizer/clrOptmzr.input.css
+++ b/TEST/coloroptimizer/clrOptmzr.input.css
@@ -1,20 +1,14 @@
 /* Feeding back the output... */
 
-/* ***************************** */
-/* OUTPUT of clrOptmzr.js:       */
-/* Logger background colors      */
-/* ***************************** */
-/* #sayh */
-/* Fri Mar 01 2024 15:39:22 GMT+0100 (Central European Standard Time) */
-/*  */
-.bgC2 { background-color: rgb(201, 242, 207, 0.83);}
-.bgA2 { background-color: rgb(205, 223, 218, 0.861);}
-.bgM2 { background-color: rgb(183, 236, 227, 0.865);}
-.bgR2 { background-color: rgb(186, 222, 244, 0.866);}
-.bgJ2 { background-color: rgb(204, 208, 253, 0.865);}
-.bgN2 { background-color: rgb(224, 208, 226, 0.863);}
-.bgQ2 { background-color: rgb(244, 212, 207, 0.867);}
-.bgO2 { background-color: rgb(228, 228, 199, 0.864);}
+.bgC2 { background-color: rgb(201, 242, 207, 0.75);} /*M*/
+.bgA2 { background-color: rgb(205, 223, 218, 0.8);}
+.bgM2 { background-color: rgb(183, 236, 227, 0.8);}
+.bgR2 { background-color: rgb(186, 222, 244, 0.8);}
+.bgJ2 { background-color: rgb(204, 208, 253, 0.8);}
+.bgN2 { background-color: rgb(224, 208, 226, 0.8);}
+.bgQ2 { background-color: rgb(244, 212, 207, 0.8);}
+.bgO2 { background-color: rgb(228, 228, 199, 0.8);}
+
 /* bgX0 == bgX2 without transparency: */
 .bgC0 { background-color: rgb(201, 242, 207);}
 .bgA0 { background-color: rgb(205, 223, 218);}
